# static_site_generator

./: README.md  main.py  process.py  pyproject.toml
src/velto/: cli.py  process.py
